components/prometheus/svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: prometheus-exporter
  
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
