components/prometheus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: prometheus

spec:
  host: prometheus.apps-crc.testing
  to:
    kind: Service
    name: prometheus-exporter
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
